--- a/package.json
+++ b/package.json
@@ -3,30 +3,31 @@
   "version": "0.0.0",
   "private": true,
   "hexo": {
-    "version": "3.9.0"
+    "version": "5.4.0"
   },
   "dependencies": {
-    "hexo": "^3.8.0",
+    "acorn": ">=6.4.1",
+    "braces": ">=2.3.1",
+    "hexo": "^5.4.0",
     "hexo-algolia": "^1.3.1",
-    "hexo-deployer-git": "^0.3.1",
+    "hexo-deployer-git": "^3.0.0",
     "hexo-generator-archive": "^0.1.4",
     "hexo-generator-baidu-sitemap": "^0.1.2",
     "hexo-generator-category": "^0.1.3",
-    "hexo-generator-feed": "^1.2.2",
+    "hexo-generator-feed": "^3.0.0",
     "hexo-generator-index": "^0.2.0",
-    "hexo-generator-searchdb": "^1.0.3",
-    "hexo-generator-sitemap": "^1.2.0",
+    "hexo-generator-searchdb": "^1.3.3",
+    "hexo-generator-sitemap": "^2.1.0",
     "hexo-generator-tag": "^0.2.0",
     "hexo-renderer-ejs": "^0.2.0",
-    "hexo-renderer-marked": "^0.2.10",
-    "hexo-renderer-stylus": "^0.3.1",
+    "hexo-renderer-marked": "^4.0.0",
+    "hexo-renderer-stylus": "^2.1.0",
+    "hexo-renderer-swig": "^2.0.0",
     "hexo-server": "^0.2.0",
-    "lodash": ">=4.17.13",
-    "lodash.merge": ">=4.6.2",
-    "braces": ">=2.3.1",
     "js-yaml": ">=3.13.1",
-    "acorn": ">=6.4.1",
     "kind-of": ">=6.0.3",
-    "minimist": ">=1.2.3"
+    "lodash": "^4.17.21",
+    "lodash.merge": ">=4.6.2",
+    "minimist": "^1.2.8"
   }
 }
